@@ -1,4 +1,4 @@
-package snake;
+package models;
 
 import java.awt.Image;
 import java.awt.Rectangle;
@@ -10,6 +10,9 @@ import java.util.Deque;
 import java.util.List;
 
 import javax.swing.ImageIcon;
+
+import controllers.GameController;
+import views.GamePanel;
 
 public class SnakeSprite {
     protected Deque<Point> snakeBody;
@@ -68,25 +71,27 @@ public class SnakeSprite {
     public void checkCollision() {
     	for(int i=1 ; i<this.getBounds().size() ;i++) {
     		if(this.getBounds().get(i).intersects(this.getBounds().get(0))) {
-				GamePanel.setInGame(false);
+//				GamePanel.setInGame(false);
+    			GameController.setGameOver();
 				return;
 			}    		
     	}
     	
     	if(snakeBody.getFirst().getY() >= GamePanel.PLAYABLE_AREA_HEIGHT || snakeBody.getFirst().getY() < 0 ||
     			snakeBody.getFirst().getX() >= GamePanel.PLAYABLE_AREA_WIDTH || snakeBody.getFirst().getX() < 0) {
-    		GamePanel.setInGame(false);
+//    		GamePanel.setInGame(false);
+    		GameController.setGameOver();
     	}
     }
     
     public void checkFruitCollision(List<FruitSprite> fruits) {
     	for(int i=0; i<fruits.size() ; i++) {
-//    		if(snakeBody.getFirst().equals(fruits.get(i).getPosition())) {
-    		if(this.getBounds().get(0).intersects(fruits.get(i).getBounds())) {
+    		if(snakeBody.getFirst().equals(fruits.get(i).getPosition())) {
+//    		if(this.getBounds().get(0).intersects(fruits.get(i).getBounds())) {
     			fruits.get(i).isCollision();
     			fruits.get(i).specialEffect();
     			increaseBody();
-    			GamePanel.setScore(this.score_multiplier * fruits.get(i).getScoreValue());
+    			GameController.setScore(this.score_multiplier * fruits.get(i).getScoreValue());
     			fruits.remove(i);
     		}
     	}
